xmonad/.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/mohammed/.xmonad/build-x86_64-linux -o /home/mohammed/.xmonad/xmonad-x86_64-linux

xmonad.hs:3:15: error: parse error on input ‘import’
  |
3 | import XMonad import qualified XMonad.StackSet as W
  |               ^^^^^^
